--- a/Skillbox/Module 4/Arrays.csproj
+++ b/Skillbox/Module 4/Arrays.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>Module_4</RootNamespace>
+    <RootNamespace>Arrays</RootNamespace>
   </PropertyGroup>
 
 </Project>
